chore: update username

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "serverless",
     "cloudflare-workers"
   ],
-  "author": "hashima.rin",
+  "author": "shimeji.rin",
   "license": "GPL-3.0-only",
   "bugs": {
     "url": "https://github.com/NekoOfficial/Neko.cf/issues"
