--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "node --env-file=.env src/main --dev ",
-    "run": "node --env-file=.env src/main"
+    "start": "node --env-file=.env src/main"
   },
   "engines": {
     "node": ">=20.6.0"
