--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "aoki-next",
   "version": "4.1.0",
   "description": "aoki, but working with discord gateway",
-  "main": "main.js",
+  "main": "dist/main.js",
   "scripts": {
-    "dev": "bun src/main.js --dev ",
-    "start": "bun src/main.js"
+    "dev": "bun src/main.js --dev",
+    "build": "node src/build.js",
+    "start": "bun dist/main.js"
   },
   "type": "module",
   "repository": {
@@ -24,7 +25,11 @@
   },
   "homepage": "https://github.com/AokiOfficial/Aoki#readme",
   "dependencies": {
-    "discord.js": "^14.15.3",
+    "discord.js": "^14.15.3"
+  },
+  "devDependencies": {
+    "esbuild": "^0.24.0",
+    "fastify": "^5.1.0",
     "mongodb": "^6.8.0",
     "osu-api": "npm:osu-api-extended@^3.0.0"
   }
