--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
     "url": "https://github.com/AokiOfficial/Aoki/issues"
   },
   "homepage": "https://github.com/AokiOfficial/Aoki#readme",
-  "dependencies": {
-    "discord.js": "^14.15.3"
-  },
   "devDependencies": {
+    "discord.js": "^14.15.3",
     "esbuild": "^0.24.0",
     "fastify": "^5.1.0",
     "mongodb": "^6.8.0",
